<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/create"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom"
        android:title="@string/create"/>
    <item
        android:id="@+id/open"
        android:icon="@drawable/ic_action_collection"
        android:showAsAction="ifRoom"
        android:title="@string/open"/>
    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_action_save"
        android:showAsAction="ifRoom"
        android:title="@string/save"/>

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/prefs"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/settings"
        android:showAsAction="never"/>
     <item
        android:id="@+id/mail"
        android:icon="@drawable/ic_action_about"
        android:title="@string/mail"/>
      <item
        android:id="@+id/togglebackground"
        android:icon="@drawable/ic_action_about"
        android:title="@string/wallpaper_hide"/>
    <!--<item
        android:id="@+id/exit"
        android:icon="@drawable/ic_action_cancel"
        android:title="@string/exit"/>
-->
</menu>